<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CardMaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="parcourir_cartes">Parcourir les cartes</string>
    <string name="jeux">Jeux</string>
    <string name="label_instructions">Instructions</string>
    <string name="label_apropos">A propos</string>
    <string name="apropos">A propos blablabla.......</string>
    <string name="bienvenue">Bienvenue dans l\'application</string>
    <string name="title_activity_parcourir_cartes">Les lapins n\'ont pas de cervelle.</string>
    <string name="title_main_activity">Ecran d\'accueil</string>
    <string name="balise_description">Coucou !!!</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="instructions">Test d\'instructions à afficher dans le menu instructions blablabla.......</string>
    <string name="title_activity_apropos">AProposActivity</string>
    <string name="title_activity_jeux">JeuxActivity</string>

</resources>